--- a/css/screens.css
+++ b/css/screens.css
@@ -32,7 +32,7 @@
     }
 
     main {
-        background: url(../assets/mainbg-mobile.png);
+        background: url(../assets/bgImage.jpg);
         background-repeat: no-repeat;
         background-position: bottom right;
         /* background-attachment: fixed; */
@@ -145,7 +145,7 @@
     }
 
     main {
-        background: url(../assets/mainbg-tablet.png);
+        background: url(../assets/bgImage.jpg);
         background-repeat: no-repeat;
         /* background-position: center center;
         background-attachment: fixed;
