--- a/css/style.css
+++ b/css/style.css
@@ -76,12 +76,13 @@ ul li {
 /* ============= main section ================*/
 
 main {
-  background: url(../assets/mainbg.png), #f6f0e9;
+  background: url(../assets/bgImage.jpg), #f6f0e9;
   background-repeat: no-repeat, no-repeat;
   /* background-position: center center, center center; */
   /* background-attachment: fixed, fixed; */
   background-size: cover, cover;
-  height: 600px;
+  height: 700px;
+  width: 2000px;
 }
 
 main>section>* {
@@ -104,7 +105,7 @@ main h1+p {
   padding: 0 0 30px 0;
 
 }
-
+/*
 .ourServicesMain,
 .links {
 
@@ -122,10 +123,10 @@ main h1+p {
   border: #FFD3AC 1px solid;
   background: #f6f0e9;
   color: #FFD3AC;
-  /* text-decoration: none;
+   text-decoration: none;
   padding: 10px 20px; */
-}
 
+/*
 .firstVisitorsDiscount {
   border: #FFD3AC 1px solid;
   background: #3a1b0f;
@@ -134,18 +135,18 @@ main h1+p {
   padding: 10px 10px 20px 20px;
   margin-top: 50px;
 
-}
-
+}*/
+/*
 .firstVisitorsDiscount p {
   font-size: 1.25rem;
   padding-bottom: 15px;
-}
-
+}*/
+/*
 .firstVisitorsDiscount p span {
   font-size: 2.25rem;
   font-weight: bold;
-}
-
+}*/
+/*
 .firstVisitorsDiscount a {
   border: #f6f0e9 1px solid;
   background: #f6f0e9;
@@ -154,7 +155,7 @@ main h1+p {
   margin-top: 10px;
   padding: 5px 10px;
   font-weight: bold;
-}
+}*/
 
 /* ============= about section ================*/
 
