--- a/css/style.css
+++ b/css/style.css
@@ -78,11 +78,11 @@ ul li {
 main {
   background: url(../assets/bgImage.jpg), #f6f0e9;
   background-repeat: no-repeat, no-repeat;
-  /* background-position: center center, center center; */
+  background-position: center center, center end; 
   /* background-attachment: fixed, fixed; */
   background-size: cover, cover;
   height: 700px;
-  width: 2000px;
+  width: 2100px;
 }
 
 main>section>* {
@@ -105,57 +105,6 @@ main h1+p {
   padding: 0 0 30px 0;
 
 }
-/*
-.ourServicesMain,
-.links {
-
-  border: #FFD3AC 1px solid;
-  background: #3a1b0f;
-  color: #f6f0e9;
-  text-decoration: none;
-  padding: 10px 20px;
-  font-weight: bold;
-}
-
-.ourServicesMain:hover,
-.links:hover {
-
-  border: #FFD3AC 1px solid;
-  background: #f6f0e9;
-  color: #FFD3AC;
-   text-decoration: none;
-  padding: 10px 20px; */
-
-/*
-.firstVisitorsDiscount {
-  border: #FFD3AC 1px solid;
-  background: #3a1b0f;
-  color: #f6f0e9;
-  width: 180px;
-  padding: 10px 10px 20px 20px;
-  margin-top: 50px;
-
-}*/
-/*
-.firstVisitorsDiscount p {
-  font-size: 1.25rem;
-  padding-bottom: 15px;
-}*/
-/*
-.firstVisitorsDiscount p span {
-  font-size: 2.25rem;
-  font-weight: bold;
-}*/
-/*
-.firstVisitorsDiscount a {
-  border: #f6f0e9 1px solid;
-  background: #f6f0e9;
-  color: black;
-  text-decoration: none;
-  margin-top: 10px;
-  padding: 5px 10px;
-  font-weight: bold;
-}*/
 
 /* ============= about section ================*/
 
