--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ html {
 }
 
 body {
-  background: #4A4A4A;
+  background: #FAFAFA;
   font-family: 'Crimson Text', serif;
 
 }
@@ -58,7 +58,7 @@ nav {
 
 nav a {
   text-decoration: none;
-  color: #FFD3AC;
+  color: #000000;
   font-weight: bold;
   font-size: 1.3rem;
 }
@@ -101,7 +101,7 @@ main h1 {
 }
 
 main h1+p {
-  font-size: 1.25rem;
+  font-size: 1.85rem;
   padding: 0 0 30px 0;
 
 }
@@ -122,8 +122,11 @@ main h1+p {
 }
 
 .aboutUs p {
-  font-size: 3rem;
+  font-size: 2.5rem;
   padding-bottom: 50px;
+  padding-left: 250px;
+  padding-right: 250px;
+
 }
 
 .aboutUs a {
@@ -174,6 +177,86 @@ main h1+p {
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+.imageGallery {
+  background-color: #fdfdfd;
+  padding: 5rem 2rem;
+  text-align: center;
+}
+
+.imageGallery h2 {
+  font-size: 4rem;
+  color: #3a1b0f;
+  margin-bottom: 3rem;
+}
+
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 0;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.gallery-item {
+  text-align: center;
+}
+
+.gallery-item img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 8px;
+  transition: transform 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.gallery-item:hover img {
+  transform: scale(1.05);
+}
+
+.gallery-item p {
+  font-weight: bold;
+  margin-top: 1rem;
+  font-size: 1.6rem;
+  color: #3a1b0f;
+  font-family: 'Crimson Text', serif;
+}
+
+.carousel-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 2rem;
+}
+
+.carousel-slide img {
+  width: 500px;
+  height: 600px;
+  border-radius: 10px;
+}
+
+.carousel-slide p {
+  text-align: center;
+  margin-top: 0.5rem;
+}
+
+button#prevBtn, button#nextBtn {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 1.5rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+button:hover {
+  background-color: #555;
+}
 
 footer {
   padding-top: 20px;
